doc: generate new docs for endpoints and fix doc version in prod
