# features/upload/domain/entities/upload_response_entity.go
@@ -1,0 +1,6 @@
+package entities
+
+type UploadResponseEntity struct {
+	URL     string `json:"url"`
+	Message string `json:"message"`
+}
