# features/upload/domain/usecases/upload_uc.go
@@ -3,9 +3,10 @@ package usecases
 import (
 	"fmt"
 	keyGuardian "github.com/RodolfoBonis/go_key_guardian"
-	"github.com/RodolfoBonis/rb-cdn/core/entities"
+	coreEntities "github.com/RodolfoBonis/rb-cdn/core/entities"
 	"github.com/RodolfoBonis/rb-cdn/core/logger"
 	"github.com/RodolfoBonis/rb-cdn/core/services"
+	"github.com/RodolfoBonis/rb-cdn/features/upload/domain/entities"
 	"github.com/gin-gonic/gin"
 	"github.com/minio/minio-go"
 	"net/http"
@@ -21,6 +22,21 @@ func NewUploadHandler(minioService services.IMinioService, log *logger.CustomLog
 	return &UploadHandler{minioService: minioService, log: log}
 }
 
+// Upload godoc
+// @Summary Upload a file to CDN
+// @Description Uploads a file to the CDN storage and returns the access URL
+// @Tags upload
+// @Accept multipart/form-data
+// @Produce json
+// @Param file formData file true "File to upload"
+// @Param folder formData string false "Folder name (optional)"
+// @Param X-API-KEY header string true "API Key for authentication"
+// @Success 200 {object} entities.UploadResponseEntity
+// @Failure 400 {object} errors.HttpError
+// @Failure 401 {object} errors.HttpError
+// @Failure 403 {object} errors.HttpError
+// @Failure 500 {object} errors.HttpError
+// @Router /upload [post]
 func (uc *UploadHandler) Upload(c *gin.Context) {
 	file, header, err := c.Request.FormFile("file")
 	folderName := c.Request.FormValue("folder")
@@ -47,7 +63,7 @@ func (uc *UploadHandler) Upload(c *gin.Context) {
 		fileNameLocation = objectName
 	}
 
-	fileEntity := entities.FileEntity{
+	fileEntity := coreEntities.FileEntity{
 		File: file,
 		Name: fileNameLocation,
 		Size: fileSize,
@@ -82,15 +98,15 @@ func (uc *UploadHandler) Upload(c *gin.Context) {
 	message := fmt.Sprintf("Arquivo '%s' enviado com sucesso!", objectName)
 	rootUri := "https://rb-cdn.rodolfodebonis.com.br/v1"
 	if videoExtensions[extension] {
-		c.JSON(http.StatusOK, gin.H{
-			"url":     fmt.Sprintf("%s/stream/%s", rootUri, objectName),
-			"message": message,
+		c.JSON(http.StatusOK, entities.UploadResponseEntity{
+			URL:     fmt.Sprintf("%s/stream/%s", rootUri, objectName),
+			Message: message,
 		})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"url":     fmt.Sprintf("%s/cdn/%s", rootUri, filePath),
-		"message": message,
+	c.JSON(http.StatusOK, entities.UploadResponseEntity{
+		URL:     fmt.Sprintf("%s/cdn/%s", rootUri, filePath),
+		Message: message,
 	})
 }
